--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: phbarrad <phbarrad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/19 12:18:37 by phbarrad          #+#    #+#              #
-#    Updated: 2021/05/19 10:05:47 by phbarrad         ###   ########.fr        #
+#    Updated: 2021/06/09 15:04:40 by phbarrad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,56 +23,11 @@ HEADER	=	-I includes
 SRC	=	cmp.c \
 		get_next_line.c \
 		get_next_line_utils.c \
-		ft_isascii.c \
-		ft_strjoin.c \
-		ft_split.c \
-		ft_strlcpy.c \
-		ft_itoa.c \
-		ft_strlcat.c \
-		ft_strtrim.c \
-		ft_strdup.c \
-		ft_strnstr.c \
 		ft_atoi.c \
-		ft_strchr.c \
-		ft_isdigit.c \
-		ft_isalnum.c \
-		ft_isalpha.c \
-		ft_memchr.c \
-		ft_memcmp.c \
-		ft_memset.c \
-		ft_calloc.c \
-		ft_strnstr.c \
-		ft_toupper.c \
-		ft_isprint.c \
-		ft_memcpy.c \
-		ft_strchr.c \
-		ft_strrchr.c \
-		ft_bzero.c \
-		ft_strncmp.c \
-		ft_memccpy.c \
-		ft_memmove.c \
-		ft_strlen.c \
-		ft_tolower.c \
-		ft_strmapi.c \
-		ft_substr.c \
-		ft_putchar_fd.c \
 		ft_putstr_fd.c \
-		ft_putendl_fd.c \
-		ft_putnbr_fd.c \
-
-BONUS	=	ft_lstnew.c \
-		ft_lstadd_front.c \
-		ft_lstsize.c \
-		ft_lstlast.c \
-		ft_lstadd_back.c \
-		ft_lstdelone.c \
-		ft_lstclear.c \
-		ft_lstiter.c \
-		ft_lstmap.c \
 
 OBJ = $(SRC:.c=.o)
 
-OBJBONUS = $(BONUS:.c=.o)
 
 all: $(NAME)
 
@@ -82,11 +37,8 @@ $(NAME): $(OBJ)
 %.o: %.c
 		$(CC) $(CFLAGS) $(HEADER) -o $@ -c $<
 
-bonus:	$(OBJ) $(OBJBONUS)
-		ar rcs $(NAME) $(OBJ) $(OBJBONUS)
-
 clean:
-		$(RM) $(OBJ) $(OBJBONUS)
+		$(RM) $(OBJ)
 
 fclean: clean
 		$(RM) $(NAME)
