--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: phbarrad <phbarrad@student.42.fr>          +#+  +:+       +#+         #
+#    By: user42 <user42@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/19 12:18:37 by phbarrad          #+#    #+#              #
-#    Updated: 2021/06/09 15:04:40 by phbarrad         ###   ########.fr        #
+#    Updated: 2021/06/11 15:24:40 by user42           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
